--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap');
 
 :root{
-    --color-primary: #9B6325;
-    --color-secondary: #211A1A;
-    --color-light: #e5b049;
+    --color-primary: #26294D;
+    --color-secondary: #282E63;
+    --color-light: #4663D8;
 }
 
 
